--- a/client/src/app/tailwind.globals.css
+++ b/client/src/app/tailwind.globals.css
@@ -5,3 +5,22 @@
 * {
   user-select: none;
 }
+*::-webkit-scrollbar {
+  width: 4px;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #ff922b;
+  border-radius: 10px;
+}
+
+@layer components {
+  .buttonSearch {
+    @apply btn btn-ghost flex-shrink-0 lg:hidden text-gray-500 hover:text-slate-800;
+  }
+  .searchMobile {
+    @apply flex gap-2 w-full border border-gray-200 rounded-full py-2 px-6;
+  }
+  .search {
+    @apply hidden lg:flex gap-2 w-[400px] border border-gray-200 rounded-full py-2 px-6;
+  }
+}
