layout profile page

--- a/client/src/app/tailwind.globals.css
+++ b/client/src/app/tailwind.globals.css
@@ -10,7 +10,7 @@
   width: 4px;
 }
 *::-webkit-scrollbar-thumb {
-  background-color: #ff922b;
+  background-color: #ff823f;
   border-radius: 10px;
 }
 
