--- a/client/src/app/tailwind.globals.css
+++ b/client/src/app/tailwind.globals.css
@@ -32,7 +32,7 @@
     from-[#ff823f] to-[#ffd700] hover:text-white active:shadow-none;
   }
   .menu-item {
-    @apply flex items-center gap-2 rounded-none p-2 hover:bg-orange-100 active:bg-gradient-to-r 
+    @apply flex items-center gap-2 rounded-none py-2 px-4 hover:bg-orange-100 active:bg-gradient-to-r 
     from-[#ff823f] to-[#ffd700];
   }
 }
