--- a/client/src/app/tailwind.globals.css
+++ b/client/src/app/tailwind.globals.css
@@ -36,6 +36,6 @@
     from-[#ff823f] to-[#ffd700];
   }
   .textbox {
-    @apply rounded-md w-full outline-none border border-gray-400 transition-all text-sm lg:text-base xl:text-lg bg-slate-50 focus:shadow focus:shadow-blue-500 focus:border-blue-500 p-2;
+    @apply rounded-md w-full outline-none border border-gray-400 transition-all text-sm lg:text-base xl:text-lg bg-slate-50 focus:shadow  p-2;
   }
 }
